--- a/porfolio/assets/css/style.css
+++ b/porfolio/assets/css/style.css
@@ -8,22 +8,22 @@
 
 
 body {
-/*	background: url(../images/vector.jpg) no-repeat center center fixed;
+/*	background: url(../images/dirtywhite.jpg) no-repeat center center fixed;*/
 	background-size: cover;
-	z-index: -10;
-	display: block;*/
+
 	margin-top: -70px;
 	padding-top: 80px;
 	background: #f2f2f2;
+
 	font-family: 'Roboto Mono', monospace;
 }
 
 
 
-.me {
+/*.me {
     box-shadow: 0px 4px 6px 2px lightgrey;
     border-radius: 50%;
-}
+}*/
 
 /*nav {
 	display: flex;
